content/_generated-doc/3.2/config/quarkus-thread-pool-thread-pool-config.adoc

:summaryTableId: quarkus-thread-pool-thread-pool-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-thread-pool-thread-pool-config_configuration]]link:#quarkus-thread-pool-thread-pool-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-thread-pool-thread-pool-config_quarkus-thread-pool-core-threads]]`link:#quarkus-thread-pool-thread-pool-config_quarkus-thread-pool-core-threads[quarkus.thread-pool.core-threads]`


[.description]
--
The core thread pool size. This number of threads will always be kept alive.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_THREAD_POOL_CORE_THREADS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_THREAD_POOL_CORE_THREADS+++`
endif::add-copy-button-to-env-var[]
--|int 
|`1`


a| [[quarkus-thread-pool-thread-pool-config_quarkus-thread-pool-prefill]]`link:#quarkus-thread-pool-thread-pool-config_quarkus-thread-pool-prefill[quarkus.thread-pool.prefill]`


[.description]
--
Prefill core thread pool. The core thread pool will be initialised with the core number of threads at startup

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_THREAD_POOL_PREFILL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_THREAD_POOL_PREFILL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-thread-pool-thread-pool-config_quarkus-thread-pool-max-threads]]`link:#quarkus-thread-pool-thread-pool-config_quarkus-thread-pool-max-threads[quarkus.thread-pool.max-threads]`


[.description]
--
The maximum number of threads. If this is not specified then it will be automatically sized to the greatest of 8 ++*++ the number of available processors and 200. For example if there are 4 processors the max threads will be 200. If there are 48 processors it will be 384.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_THREAD_POOL_MAX_THREADS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_THREAD_POOL_MAX_THREADS+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-thread-pool-thread-pool-config_quarkus-thread-pool-queue-size]]`link:#quarkus-thread-pool-thread-pool-config_quarkus-thread-pool-queue-size[quarkus.thread-pool.queue-size]`


[.description]
--
The queue size. For most applications this should be unbounded

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_THREAD_POOL_QUEUE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_THREAD_POOL_QUEUE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-thread-pool-thread-pool-config_quarkus-thread-pool-growth-resistance]]`link:#quarkus-thread-pool-thread-pool-config_quarkus-thread-pool-growth-resistance[quarkus.thread-pool.growth-resistance]`


[.description]
--
The executor growth resistance. A resistance factor applied after the core pool is full; values applied here will cause that fraction of submissions to create new threads when no idle thread is available. A value of `0.0f` implies that threads beyond the core size should be created as aggressively as threads within it; a value of `1.0f` implies that threads beyond the core size should never be created.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_THREAD_POOL_GROWTH_RESISTANCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_THREAD_POOL_GROWTH_RESISTANCE+++`
endif::add-copy-button-to-env-var[]
--|float 
|`0f`


a| [[quarkus-thread-pool-thread-pool-config_quarkus-thread-pool-shutdown-timeout]]`link:#quarkus-thread-pool-thread-pool-config_quarkus-thread-pool-shutdown-timeout[quarkus.thread-pool.shutdown-timeout]`


[.description]
--
The shutdown timeout. If all pending work has not been completed by this time then additional threads will be spawned to attempt to finish any pending tasks, and the shutdown process will continue

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_THREAD_POOL_SHUTDOWN_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_THREAD_POOL_SHUTDOWN_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|`1M`


a| [[quarkus-thread-pool-thread-pool-config_quarkus-thread-pool-shutdown-interrupt]]`link:#quarkus-thread-pool-thread-pool-config_quarkus-thread-pool-shutdown-interrupt[quarkus.thread-pool.shutdown-interrupt]`


[.description]
--
The amount of time to wait for thread pool shutdown before tasks should be interrupted. If this value is greater than or equal to the value for `shutdown-timeout`, then tasks will not be interrupted before the shutdown timeout occurs.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_THREAD_POOL_SHUTDOWN_INTERRUPT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_THREAD_POOL_SHUTDOWN_INTERRUPT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|`10S`


a| [[quarkus-thread-pool-thread-pool-config_quarkus-thread-pool-shutdown-check-interval]]`link:#quarkus-thread-pool-thread-pool-config_quarkus-thread-pool-shutdown-check-interval[quarkus.thread-pool.shutdown-check-interval]`


[.description]
--
The frequency at which the status of the thread pool should be checked during shutdown. Information about waiting tasks and threads will be checked and possibly logged at this interval. Setting this key to an empty value disables the shutdown check interval.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_THREAD_POOL_SHUTDOWN_CHECK_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_THREAD_POOL_SHUTDOWN_CHECK_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|`5`


a| [[quarkus-thread-pool-thread-pool-config_quarkus-thread-pool-keep-alive-time]]`link:#quarkus-thread-pool-thread-pool-config_quarkus-thread-pool-keep-alive-time[quarkus.thread-pool.keep-alive-time]`


[.description]
--
The amount of time a thread will stay alive with no work.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_THREAD_POOL_KEEP_ALIVE_TIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_THREAD_POOL_KEEP_ALIVE_TIME+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|`30S`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() javadoc] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
